<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_app_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/btn_ranking"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/title_escolha_heroi"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_app_name" />

    <ImageView
        android:id="@+id/img_p1"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="17dp"
        android:src="@drawable/userhide"
        app:layout_constraintEnd_toStartOf="@+id/btn_playar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_app_name" />

    <ImageView
        android:id="@+id/img_p2"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/userhide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_playar"
        app:layout_constraintTop_toBottomOf="@+id/text_app_name" />


    <Button
        android:id="@+id/btn_playar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:text="@string/btn_jogar"
        app:layout_constraintEnd_toStartOf="@+id/img_p2"
        app:layout_constraintStart_toEndOf="@+id/img_p1"
        app:layout_constraintTop_toBottomOf="@+id/btn_ranking" />

<!--    <EditText-->
<!--        android:id="@+id/editText_num_jogador1"-->
<!--        android:layout_width="146dp"-->
<!--        android:layout_height="48dp"-->
<!--        android:layout_marginStart="8dp"-->
<!--        android:ems="10"-->
<!--        android:hint="Digite aqui..."-->
<!--        android:inputType="numberDecimal"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/img_p1" />-->

<!--    <EditText-->
<!--        android:id="@+id/editText_num_jogador2"-->
<!--        android:layout_width="148dp"-->
<!--        android:layout_height="48dp"-->
<!--        android:layout_marginEnd="8dp"-->
<!--        android:layout_marginBottom="14dp"-->
<!--        android:ems="10"-->
<!--        android:hint="Digite aqui..."-->
<!--        android:inputType="numberDecimal"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/recyclerView_herois"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/img_p2" />-->


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_herois"
        android:layout_width="0dp"
        android:layout_height="502dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_p1" />


</androidx.constraintlayout.widget.ConstraintLayout>